--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 081c37d
+	base = 07c097c
 	trimbase = 
 	parent = debian/turbulent/rqt_topic
-	previous = 
+	previous = 081c37d
