--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/rqt_topic
-	previous = 
-	base = d320b87
+	previous = d320b87
+	base = da5277b
 	trim = 
 	trimbase = 
