--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/rqt_topic
-	previous = 
-	base = 4fc781f
+	previous = 4fc781f
+	base = 308057c
 	trim = 
 	trimbase = 
