--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rqt_topic
-	previous = 
-	base = 8b0e1eb
+	previous = 8b0e1eb
+	base = 3b4c147
 	trim = 
 	trimbase = 
