--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rqt_topic
-	previous = 
-	base = e7f5e39
+	previous = e7f5e39
+	base = 5419abf
 	trim = 
 	trimbase = 
