--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rqt_topic
-	previous = 
-	base = 9ea0a5a
+	previous = 9ea0a5a
+	base = 8e25bad
 	trim = 
 	trimbase = 
