--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rqt_topic
-	previous = 
-	base = b4fbe96
+	previous = b4fbe96
+	base = 5d0fd71
 	trim = 
 	trimbase = 
