--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.2.3-1": ["Wed Apr 06 2022", "Audrow Nash", "audrow@openrobotics.org"], "1.2.2-2": ["Tue Feb 08 2022", "Dorian Scholz", "scholz@sim.tu-darmstadt.de"]}
+{"1.2.3-2": ["Tue Apr 19 2022", "Audrow Nash", "audrow@openrobotics.org"], "1.2.3-1": ["Wed Apr 06 2022", "Audrow Nash", "audrow@openrobotics.org"], "1.2.2-2": ["Tue Feb 08 2022", "Dorian Scholz", "scholz@sim.tu-darmstadt.de"]}
